force-app/main/default/objects/DBM_Report_Grouping__c.object
<CustomObject>
    <fields>
        <fullName>Data_Source__c</fullName>
        <label>Data Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>custom</fullName>
                    <default>true</default>
                    <label>custom</label>
                </value>
                <value>
                    <fullName>user</fullName>
                </value>
                <value>
                    <fullName>sobject</fullName>
                </value>
                <value>
                    <fullName>picklist</fullName>
                </value>
                <value>
                    <fullName>months</fullName>
                </value>
                <value>
                    <fullName>quarters</fullName>
                </value>
                <value>
                    <fullName>priorities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Display_as_Link__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display as Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enumerate_Entries__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enumerate Entries</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grouping_Number__c</fullName>
        <label>Grouping Number</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report__c</fullName>
        <label>Report</label>
        <referenceTo>DBM_Report__c</referenceTo>
        <relationshipLabel>DBM Report Groupings</relationshipLabel>
        <relationshipName>DBM_Report_Groupings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>DBM Report Grouping</label>
    <nameField>
        <label>DBM Report Grouping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DBM Report Groupings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>